set(TESTPROGS)
macro(build prog src inc libs)
    add_executable(${prog} ${src})
    list(APPEND TESTPROGS ${prog})
    target_include_directories(${prog} PUBLIC ../../include;${inc})
    add_dependencies(${prog} headers)
    target_link_libraries(${prog} ${libs})
endmacro ()
macro(simple prog src libs)
    add_executable(${prog} ${src})
    list(APPEND TESTPROGS ${prog})
    target_link_libraries(${prog} ${libs})
endmacro ()

add_subdirectory(testutil)

simple(confdump confdump.c crypto)
simple(versions versions.c crypto)
simple(aborttest aborttest.c crypto)
simple(sanitytest sanitytest.c testutil;crypto)
simple(time_test time_test.c testutil;crypto)
simple(rand_test rand_test.c testutil;crypto)
simple(rsa_complex rsa_complex.c "")
simple(test_test test_test.c testutil;crypto)
simple(exdatatest exdatatest.c testutil;crypto)
simple(bntest bntest.c testutil;crypto)
simple(ectest ectest.c testutil;crypto)
simple(ecstresstest ecstresstest.c testutil;crypto)
simple(gmdifftest gmdifftest.c testutil;crypto)
simple(pbelutest pbelutest.c testutil;crypto)
simple(mdc2test mdc2test.c testutil;crypto)
simple(sha_test sha_test.c testutil;crypto)
simple(exptest exptest.c testutil;crypto)
simple(localetest localetest.c testutil;crypto)
simple(evp_pkey_ctx_new_from_name evp_pkey_ctx_new_from_name.c crypto)
simple(pbetest pbetest.c testutil;crypto)
simple(fatalerrtest fatalerrtest.c "testutil;ssl;crypto")
simple(tls13ccstest tls13ccstest.c "testutil;ssl;crypto")
simple(upcallstest upcallstest.c testutil;crypto)
simple(user_property_test user_property_test.c testutil;crypto)
simple(hpke_test hpke_test.c testutil;crypto)
simple(evp_libctx_test evp_libctx_test.c testutil;crypto)
simple(evp_fetch_prov_test evp_fetch_prov_test.c testutil;crypto)
simple(provfetchtest provfetchtest.c testutil;crypto)
simple(prov_config_test prov_config_test.c testutil;crypto)
simple(evp_pkey_provided_test evp_pkey_provided_test.c testutil;crypto)
simple(ossl_store_test ossl_store_test.c testutil;crypto)
simple(provider_status_test provider_status_test.c testutil;crypto)
simple(pairwise_fail_test pairwise_fail_test.c testutil;crypto)
simple(nodefltctxtest nodefltctxtest.c testutil;crypto)
simple(v3nametest v3nametest.c testutil;crypto)
simple(crltest crltest.c testutil;crypto)
simple(v3ext v3ext.c testutil;crypto)
simple(danetest danetest.c "testutil;ssl;crypto")
simple(constant_time_test constant_time_test.c testutil;crypto)
simple(safe_math_test safe_math_test.c testutil;crypto)
simple(verify_extra_test verify_extra_test.c testutil;crypto)
simple(clienthellotest clienthellotest.c "testutil;ssl;crypto")
simple(bad_dtls_test bad_dtls_test.c "testutil;ssl;crypto")
simple(packettest packettest.c testutil;crypto)
simple(asynctest asynctest.c crypto)
simple(secmemtest secmemtest.c testutil;crypto)
simple(memleaktest memleaktest.c testutil;crypto)
simple(pkcs12_format_test pkcs12_format_test.c testutil;crypto)
simple(pkcs12_api_test pkcs12_api_test.c testutil;crypto)
simple(pkcs7_test pkcs7_test.c testutil;crypto)
simple(punycode_test punycode_test.c testutil;crypto)
simple(stack_test stack_test.c testutil;crypto)
simple(lhash_test lhash_test.c testutil;crypto)
simple(dtlsv1listentest dtlsv1listentest.c "testutil;ssl;crypto")
simple(ct_test ct_test.c testutil;crypto)
simple(threadpool_test threadpool_test.c testutil;crypto)
simple(threadstest threadstest.c testutil;crypto)
simple(threadstest_fips threadstest_fips.c testutil;crypto)
simple(afalgtest afalgtest.c testutil;crypto)
simple(d2i_test d2i_test.c testutil;crypto)
simple(ssl_test_ctx_test ssl_test_ctx_test.c "testutil;ssl;crypto")
simple(ssl_test ssl_test.c "testutil;ssl;crypto")
simple(cipherlist_test cipherlist_test.c "testutil;ssl;crypto")
simple(x509aux x509aux.c testutil;crypto)
simple(asynciotest asynciotest.c "testutil;ssl;crypto")
simple(bio_callback_test bio_callback_test.c testutil;crypto)
simple(bio_readbuffer_test bio_readbuffer_test.c testutil;crypto)
simple(bio_memleak_test bio_memleak_test.c testutil;crypto)
simple(bio_meth_test bio_meth_test.c testutil;crypto)
simple(bio_core_test bio_core_test.c testutil;crypto)
simple(bio_dgram_test bio_dgram_test.c testutil;crypto)
simple(bio_tfo_test bio_tfo_test.c testutil;crypto)
simple(membio_test membio_test.c testutil;crypto)
simple(params_api_test params_api_test.c testutil;crypto)
simple(params_conversion_test params_conversion_test.c testutil;crypto)
simple(param_build_test param_build_test.c testutil;crypto)
simple(sslapitest "sslapitest.c;filterprov.c;tls-provider.c"
    "testutil;ssl;crypto")
simple(ssl_handshake_rtt_test ssl_handshake_rtt_test.c "testutil;ssl;crypto")
simple(defltfips_test defltfips_test.c testutil;crypto)
simple(fips_version_test fips_version_test.c testutil;crypto)
simple(ocspapitest ocspapitest.c testutil;crypto)
simple(dtlstest dtlstest.c "testutil;ssl;crypto")
simple(sslcorrupttest sslcorrupttest.c "testutil;ssl;crypto")
simple(bio_enc_test bio_enc_test.c testutil;crypto)
simple(pkey_meth_test pkey_meth_test.c testutil;crypto)
simple(pkey_meth_kdf_test pkey_meth_kdf_test.c testutil;crypto)
simple(evp_kdf_test evp_kdf_test.c testutil;crypto)
simple(evp_xof_test evp_xof_test.c testutil;crypto)
simple(evp_pkey_dparams_test evp_pkey_dparams_test.c testutil;crypto)
simple(x509_time_test x509_time_test.c testutil;crypto)
simple(x509_test x509_test.c testutil;crypto)
simple(recordlentest recordlentest.c "testutil;ssl;crypto")
simple(drbgtest drbgtest.c testutil;crypto)
simple(rand_status_test rand_status_test.c testutil;crypto)
simple(x509_dup_cert_test x509_dup_cert_test.c testutil;crypto)
simple(x509_load_cert_file_test x509_load_cert_file_test.c testutil;crypto)
simple(x509_check_cert_pkey_test x509_check_cert_pkey_test.c testutil;crypto)
simple(pemtest pemtest.c testutil;crypto)
simple(ciphername_test ciphername_test.c "testutil;ssl;crypto")
simple(servername_test servername_test.c "testutil;ssl;crypto")
simple(uitest "uitest.c;../apps/lib/apps_ui.c" "testutil;ssl;crypto")
simple(cipherbytes_test cipherbytes_test.c "testutil;ssl;crypto")
simple(asn1_encode_test asn1_encode_test.c testutil;crypto)
simple(asn1_decode_test asn1_decode_test.c testutil;crypto)
simple(asn1_string_table_test asn1_string_table_test.c testutil;crypto)
simple(asn1_stable_parse_test asn1_stable_parse_test.c testutil;crypto)
simple(time_offset_test time_offset_test.c testutil;crypto)
simple(conf_include_test conf_include_test.c testutil;crypto)
simple(sslbuffertest sslbuffertest.c "testutil;ssl;crypto")
simple(sysdefaulttest sysdefaulttest.c "testutil;ssl;crypto")
simple(errtest errtest.c testutil;crypto)
simple(aesgcmtest aesgcmtest.c testutil;crypto)
simple(bio_prefix_text bio_prefix_text.c testutil;crypto)
simple(ssl_ctx_test ssl_ctx_test.c "testutil;ssl;crypto")
simple(build_wincrypt_test build_wincrypt_test.c ssl;crypto)

simple(evp_test evp_test.c testutil;crypto)
if (NOT OPENSSL_NO_LEGACY)
    target_compile_definitions(evp_test PUBLIC NO_LEGACY_MODULE)
endif ()

if (NOT OPENSSL_NO_MODULE AND NOT OPENSSL_NO_LEGACY)
    build(endecode_test ../providers/legacyprov.c
        "../providers/common/include;../providers/implementations/include"
        "../providers/liblegacy.a;../providers/libcommon.a")
    target_compile_definitions(endecode_test PUBLIC STATIC_LEGACY)
    build(evp_extra_test ../providers/legacyprov.c
        "../providers/common/include;../providers/implementations/include"
        "../providers/liblegacy.a;../providers/libcommon.a")
    target_compile_definitions(evp_extra_test PUBLIC STATIC_LEGACY)
else ()
    simple(endecode_test endecode_test.c testutil;crypto)
    simple(evp_extra_test evp_extra_test.c testutil;crypto)
endif ()

if (NOT OPENSSL_NO_SHARED)
    simple(shlibloadtest shlibloadtest.c testutil;crypto)
    simple(moduleloadtest moduleloadtest.c testutil;crypto)
endif ()

if (NOT OPENSSL_NO_ACVP_TESTS)
    simple(acvp_test acvp_test.c testutil;crypto)
endif ()

if (NOT OPENSSL_NO_RPK)
    simple(rpktest rpktest.c "testutil;ssl;crypto")
endif ()

if (NOT OPENSSL_NO_SOCK)
    if (NOT OPENSSL_NO_HTTP)
        simple(http_test http_test.c testutil;crypto)
    endif ()
    simple(bio_addr_test bio_addr_test.c testutil;crypto)
endif ()

if (NOT OPENSSL_NO_CMS)
    simple(cmsapitest cmsapitest.c testutil;crypto)
endif ()

if (NOT OPENSSL_NO_PSK)
    simple(dtls_mtu_test dtls_mtu_test.c "testutil;ssl;crypto")
endif ()

if (NOT OPENSSL_NO_CMP)
    simple(cmp_asn_test cmp_asn_test.c testutil;crypto)
    simple(cmp_ctx_test cmp_ctx_test.c testutil;crypto)
    simple(cmp_hdr_test cmp_hdr_test.c testutil;crypto)
    simple(cmp_status_test cmp_status_test.c testutil;crypto)
    simple(cmp_protect_test cmp_protect_test.c testutil;crypto)
    simple(cmp_msg_test cmp_msg_test.c testutil;crypto)
    simple(cmp_vfy_test cmp_vfy_test.c testutil;crypto)
    simple(cmp_server_test cmp_server_test.c testutil;crypto)
    simple(cmp_client_test "cmp_client_test.c;../apps/lib/cmp_mock_srv.c"
    "testutil;ssl;crypto")
endif ()

set (CASOURCE
    ca_internals_test.c ../apps/ca.c ../apps/lib/apps.c ../apps/lib/app_rand.c
    ../apps/lib/engine.c ../apps/lib/app_provider.c ../apps/lib/app_libctx.c
    ../apps/lib/fmt.c ../apps/lib/apps_ui.c ../apps/lib/app_x509.c
    ../crypto/asn1/a_time.c ../crypto/ctype.c)
simple(ca_internals_test "${CASOURCE}" "testutil;ssl;crypto")

# Internal test programs.  These are essentially a collection of internal
# test routines.  Some of them need to reach internal symbols that aren't
# available through the shared library (at least on Linux, Solaris, and
# Windows, where the exported symbols are those listed in util/*.num), these
# programs are forcibly linked with the static libraries, where all symbols
# are always available.
simple(asn1_internal_test asn1_internal_test.c testutil;crypto)
simple(modes_internal_test modes_internal_test.c testutil;crypto)
simple(context_internal_test context_internal_test.c testutil;crypto)
simple(ssl_cert_table_internal_test ssl_cert_table_internal_test.c
    testutil;crypto)
simple(x509_internal_test x509_internal_test.c testutil;crypto)
simple(rsa_test rsa_test.c testutil;crypto)
simple(rsa_mp_test rsa_mp_test.c testutil;crypto)
simple(ecdsatest ecdsatest.c testutil;crypto)
simple(dsatest dsatest.c testutil;crypto)
simple(dsa_no_digest_size_test dsa_no_digest_size_test.c testutil;crypto)
simple(tls13encryptiontest tls13encryptiontest.c "testutil;ssl;crypto")
simple(ideatest ideatest.c testutil;crypto)
simple(wpackettest wpackettest.c "testutil;ssl;crypto")
simple(property_test property_test.c testutil;crypto)
simple(ctype_internal_test ctype_internal_test.c testutil;crypto)
simple(sparse_array_test sparse_array_test.c testutil;crypto)
simple(dhtest dhtest.c testutil;crypto)
simple(hmactest hmactest.c testutil;crypto)
simple(destest destest.c testutil;crypto)
simple(rc2test rc2test.c testutil;crypto)
simple(rc4test rc4test.c testutil;crypto)
simple(rc5test rc5test.c testutil;crypto)
simple(asn1_dsa_internal_test asn1_dsa_internal_test.c testutil;crypto)
simple(keymgmt_internal_test keymgmt_internal_test.c testutil;crypto)
simple(ffc_internal_test ffc_internal_test.c testutil;crypto)
simple(cipher_overhead_test cipher_overhead_test.c "testutil;ssl;crypto")
simple(namemap_internal_test namemap_internal_test.c testutil;crypto)
build(rdcpu_sanitytest rdcpu_sanitytest.c ../crypto testutil;crypto)
build(rsa_sp800_56b_test rsa_sp800_56b_test.c ../crypto/rsa testutil;crypto)
simple(ssl_old_test ssl_old_test.c "testutil;ssl;crypto")
simple(ext_internal_test ext_internal_test.c "testutil;ssl;crypto")
simple(algorithmid_test algorithmid_test.c testutil;crypto)
simple(asn1_time_test
    "asn1_time_test.c;../crypto/ctype.c;../crypto/asn1/a_time.c"
    testutil;crypto)
build(bn_internal_test bn_internal_test.c ../crypto/bn testutil;crypto)

if (NOT OPENSSL_NO_POLY1305)
    simple(poly1305_internal_test poly1305_internal_test.c testutil;crypto)
endif ()
if (NOT OPENSSL_NO_CHACHA)
    simple(chacha_internal_test chacha_internal_test.c testutil;crypto)
endif ()
if (NOT OPENSSL_NO_SIPHASH)
    simple(siphash_internal_test siphash_internal_test.c testutil;crypto)
endif ()
if (NOT OPENSSL_NO_SM2)
    simple(sm2_internal_test sm2_internal_test.c testutil;crypto)
endif ()
if (NOT OPENSSL_NO_SM3)
    simple(sm3_internal_test sm3_internal_test.c testutil;crypto)
endif ()
if (NOT OPENSSL_NO_SM4)
    simple(sm4_internal_test sm4_internal_test.c testutil;crypto)
endif ()
if (NOT OPENSSL_NO_EC)
    build(ec_internal_test ec_internal_test.c ../crypto/ec testutil;crypto)
    build(curve448_internal_test curve448_internal_test.c ../crypto/ec/curve448
        testutil;crypto)
    simple(evp_pkey_dhkem_test evp_pkey_dhkem_test.c testutil;crypto)
endif ()
if (NOT OPENSSL_NO_CMAC)
    simple(cmactest cmactest.c testutil;crypto)
endif ()

if (NOT OPENSSL_NO_MDC2)
    simple(mdc2_internal_test mdc2_internal_test.c testutil;crypto)
endif ()

# We disable this test completely in a shared build because it deliberately
# redefines some internal libssl symbols. This doesn't work in a non-shared
# build
if (NOT OPENSSL_NO_SHARED)
    simple(tls13secretstest
        "tls13secretstest.c;../ssl/tls13_enc.c;../crypto/packet.c"
        "testutil;ssl;crypto")
    if (NOT OPENSSL_NO_KTLS)
        target_compile_definitions(tls13secretstest PUBLIC OPENSSL_NO_KTLS)
    endif ()
endif ()

if (NOT OPENSSL_NO_ZLIB AND NOT OPENSSL_NO_BROTLI AND NOT OPENSSL_NO_ZSTD)
    simple(cert_comp_test cert_comp_test.c "testutil;ssl;crypto")
    simple(bio_comp_test bio_comp_test.c testutil;crypto)
endif ()

simple(provider_internal_test "provider_internal_test.c;p_test.c"
    testutil;crypto)
target_compile_definitions(provider_internal_test PUBLIC
    PROVIDER_INIT_FUNCTION_NAME=p_test_init
    NO_PROVIDER_MODULE)

simple(provider_test "provider_test.c;p_test.c" testutil;crypto)
target_compile_definitions(provider_test PUBLIC
    PROVIDER_INIT_FUNCTION_NAME=p_test_init
    NO_PROVIDER_MODULE)
#configure_file(provider_internal_test.cnf.in, provider_internal_test.cnf)

simple(provider_fallback_test provider_fallback_test.c testutil;crypto)
simple(provider_pkey_test provider_pkey_test.c testutil;crypto)
simple(provider_default_search_path_test provider_default_search_path_test.c
    testutil;crypto)
simple(params_test params_test.c testutil;crypto)
simple(hexstr_test hexstr_test.c testutil;crypto)

simple(decoder_propq_test decoder_propq_test.c testutil;crypto)

if (NOT OPENSSL_NO_DEPRECATED_3_0)
    simple(igetest igetest.c testutil;crypto)
    simple(bftest bftest.c testutil;crypto)
    simple(casttest casttest.c testutil;crypto)
    simple(enginetest enginetest.c testutil;crypto)
    simple(rsa_x931_test rsa_x931_test.c testutil;crypto)
    simple(endecoder_legacy_test endecoder_legacy_test.c testutil;crypto)
    simple(pem_read_depr_test pem_read_depr_test.c testutil;crypto)
endif ()

if (NOT OPENSSL_NO_SHARED)
    simple(timing_load_creds timing_load_creds.c crypto)
endif ()

add_custom_target(testprogs COMMENT "Compiled tests"
    DEPENDS ${TESTPROGS})

if (NOT OPENSSL_NO_BUILDTEST_CXX)
    include(CXXTests.cmake)
endif ()
